force-app/main/default/objects/ExternalMapping__c/ExternalMapping__c.object-meta.xml
<CustomObject>
    <description>Object to have mapping of salesforce objects with external objects</description>
    <label>External Mapping</label>
    <nameField>
        <displayFormat>EXM-{00000000}</displayFormat>
        <label>External Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>