force-app/main/default/objects/ExternalMapping__c/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <description>Id of the salesforce object</description>
    <externalId>true</externalId>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>