force-app/main/default/objects/ExternalMapping__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>What is the external system</description>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COUNTERTOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>