force-app/main/default/objects/ExternalMapping__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the object to relate</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>USER</fullName>
            </value>
            <value>
                <fullName>CONTACT</fullName>
            </value>
            <value>
                <fullName>SALESOFFICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>