force-app/main/default/objects/ExternalMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>ExternalId__c</columns>
    <columns>SalesforceId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>